apache/apache1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache1-deployment
  labels:
    app: apache-worker1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-worker1
  template:
    metadata:
      labels:
        app: apache-worker1
    spec:
      containers:
      - name: apache
        image: rocky/apache2-php5.5:latest
        ports:
        - containerPort: 80
