apache/apache1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache1-service
spec:
  selector:
    app: apache-worker1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
