apache/apache2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache2-service
spec:
  selector:
    app: apache-worker2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
